fix annotations indentation error

--- a/charts/fx-syncstorage/templates/secret_dbUrls.yaml
+++ b/charts/fx-syncstorage/templates/secret_dbUrls.yaml
@@ -50,7 +50,7 @@ spec:
               kind: Secret
               metadata:
                 name: $SECRET_NAME
-                {{- if .Values.syncstorage.keepGeneratedSecrets -}}
+                {{- if .Values.syncstorage.keepGeneratedSecrets }}
                 annotations:
                   helm.sh/resource-policy: keep
                 {{- end }}
@@ -74,7 +74,7 @@ metadata:
   name: {{ printf "%s-db-existing-urls" .Release.Name }}
   labels:
     {{- include "fx-syncstorage.labels" . | nindent 4 }}
-  {{- if .Values.syncstorage.keepGeneratedSecrets -}}
+  {{- if .Values.syncstorage.keepGeneratedSecrets }}
   annotations:
     helm.sh/resource-policy: keep
   {{- end }}
