--- a/charts/fx-syncstorage/templates/secret_syncserverdb.yaml
+++ b/charts/fx-syncstorage/templates/secret_syncserverdb.yaml
@@ -5,11 +5,10 @@ metadata:
   name: {{ .Values.syncserverdb.auth.existingSecret }}
   labels:
     {{- include "fx-syncstorage.labels" . | nindent 4 }}
+  {{- if .Values.syncstorage.keepGeneratedSecrets }}
   annotations:
-#    helm.sh/hook: pre-install
-    {{- if .Values.syncstorage.keepGeneratedSecrets -}}
     helm.sh/resource-policy: keep
-    {{- end }}
+  {{- end }}
 data:
   mysql-root-password: {{ randAlphaNum 20 | b64enc | quote }}
   mysql-password: {{ randAlphaNum 20 | b64enc | quote }}
