--- a/charts/fx-syncstorage/templates/secret_syncstorage.yaml
+++ b/charts/fx-syncstorage/templates/secret_syncstorage.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}
   labels:
     {{- include "fx-syncstorage.labels" . | nindent 4 }}
-  {{- if .Values.syncstorage.keepGeneratedSecrets -}}
+  {{- if .Values.syncstorage.keepGeneratedSecrets }}
   annotations:
     helm.sh/resource-policy: keep
   {{- end }}
