--- a/charts/fx-syncstorage/templates/job_tokenserverdb.yaml
+++ b/charts/fx-syncstorage/templates/job_tokenserverdb.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     {{- include "fx-syncstorage.labels" . | nindent 4 }}
   annotations:
-    helm.sh/hook: post-install
-#    helm.sh/hook-delete-policy: hook-succeeded
+    helm.sh/hook: post-install,post-upgrade
+    helm.sh/hook-delete-policy: hook-succeeded
 spec:
   template:
     metadata:
