--- a/charts/fx-syncstorage/Chart.yaml
+++ b/charts/fx-syncstorage/Chart.yaml
@@ -15,13 +15,17 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.6
+version: 0.1.7
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.13.6"
+
+maintainers:
+  - name: "holysoles"
+    url: "https://github.com/holysoles"
 
 dependencies:
   - name: mysql
@@ -33,4 +37,4 @@ dependencies:
     alias: tokenserverdb
     version: 12.3.1
     repository: oci://registry-1.docker.io/bitnamicharts
-    condition: okenserver-db.enabled
+    condition: tokenserver-db.enabled
