--- a/charts/fx-syncstorage/values.yaml
+++ b/charts/fx-syncstorage/values.yaml
@@ -5,7 +5,7 @@ replicaCount: 1
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: mozilla/syncstorage-rs
+  repository: ghcr.io/porelli/firefox-sync
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
