fix(secrets): apply prior secrets fix to syncserverdb

--- a/charts/fx-syncstorage/templates/secret_syncserverdb.yaml
+++ b/charts/fx-syncstorage/templates/secret_syncserverdb.yaml
@@ -1,4 +1,5 @@
 {{- if (include "fx-syncstorage.autogenerateSyncDb" .) }}
+{{- $secret := (lookup "v1" "Secret" .Release.Namespace .Values.syncserverdb.auth.existingSecret) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -10,6 +11,14 @@ metadata:
     helm.sh/resource-policy: keep
   {{- end }}
 data:
-  mysql-root-password: {{ randAlphaNum 20 | b64enc | quote }}
-  mysql-password: {{ randAlphaNum 20 | b64enc | quote }}
+  mysql-root-password: {{- if $secret }}
+    {{ index $secret.data "mysql-root-password" }}
+  {{- else }}
+    {{ randAlphaNum 20 | b64enc | quote }}
+  {{- end }}
+  mysql-password: {{- if $secret }}
+    {{ index $secret.data "mysql-password" }}
+  {{- else }}
+    {{ randAlphaNum 20 | b64enc | quote }}
+  {{- end }}
 {{- end }}
